# pacelab

./: .gitignore  PACELAB_PROJECT_BRIEF.md  README.md  docker-compose.yml  setup_oracle.sh
apps/api/: .dockerignore  Dockerfile  pyproject.toml
apps/api/pacelab_api/: main.py
apps/api/pacelab_api/schemas/: base.py
apps/api/tests/: test_health.py
apps/web/: Dockerfile  package-lock.json  package.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: api-status.tsx  circuit-path.tsx  hero-section.tsx
apps/web/lib/: api.ts
docs/superpowers/plans/: 2026-05-13-session1-scaffold.md
docs/superpowers/specs/: 2026-05-13-session1-scaffold-design.md  2026-05-13-session2-data-pipeline-design.md
